--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,4 @@
 streamlit
-geopandas
 pandas
-matplotlib
-shapely
-fiona
-pyproj
-rtree
-flask
-transformers 
-torch
-render_template, 
-request, jsonify
-pipeline
+snowflake.connector
+joblib
